Properties (not members)

--- a/tmpl/navigation.tmpl
+++ b/tmpl/navigation.tmpl
@@ -22,7 +22,7 @@ var self = this;
             <?js
             if (item.members.length) {
             ?>
-            <span class="subtitle">Members</span>
+            <span class="subtitle">Properties</span>
             <?js
                 item.members.forEach(function (v) {
             ?>
