--- a/static/styles/jaguar.css
+++ b/static/styles/jaguar.css
@@ -27,7 +27,7 @@ li {
   float: left;
   width: 250px;
   height: 100%;
-  background-color: #1a1a1a;
+  background-color: #591E62; // dark purple instead of #1a1a1a;
 }
 .navigation .applicationName {
   margin: 0;
@@ -43,7 +43,7 @@ li {
   padding: 10px 15px;
 }
 .navigation .search input {
-  background-color: #333;
+  background-color: #642170; // purple instead of #333;
   color: #fff;
   border-color: #555;
 }
