--- a/static/styles/jaguar.css
+++ b/static/styles/jaguar.css
@@ -58,6 +58,9 @@ li {
   margin-bottom: 8px;
   padding-bottom: 8px;
   border-bottom: 1px solid #333;
+  margin-bottom: 2px; // instead of 8px;
+  padding-bottom: 2px; // instead of 8px;
+  // instead of border-bottom: 1px solid #333;
 }
 .navigation li.item a {
   color: #bbb;
