Don't show source code line numbers

--- a/tmpl/method.tmpl
+++ b/tmpl/method.tmpl
@@ -14,6 +14,7 @@ var self = this;
         <?js if (data.meta) {?>
         <div class="tag-source">
             <?js= self.linkto(meta.shortpath) ?>, <?js= self.linkto(meta.shortpath, 'line ' + meta.lineno, null, 'line' + meta.lineno) ?>
+            <?js= self.linkto(meta.filename) ?>            
         </div>
         <?js } ?>
     </div>
