--- a/tmpl/navigation.tmpl
+++ b/tmpl/navigation.tmpl
@@ -2,7 +2,9 @@
 var self = this;
 ?>
 <div class="navigation">
-    <h3 class="applicationName"><a href="index.html"><?js= env.conf.templates.applicationName ?></a></h3>
+    <?js if (env.conf.templates.applicationName && env.conf.templates.applicationName.length > 0) { ?>
+        <h3 class="applicationName"><a href="index.html"><?js= env.conf.templates.applicationName ?></a></h3>
+    <?js } ?>
 
     <div class="search">
         <input id="search" type="text" class="form-control input-sm" placeholder="Search API Reference">
