--- a/tmpl/container.tmpl
+++ b/tmpl/container.tmpl
@@ -47,7 +47,7 @@
     </div>
     
     <?js if (doc.augments && doc.augments.length) { ?>
-        <h3 class="subsection-title">Extends</h3>
+        <h3 class="subsection-title">Inherits</h3>
         
         <ul><?js doc.augments.forEach(function(a) { ?>
             <li><?js= self.linkto(a, a) ?></li>
@@ -55,7 +55,7 @@
     <?js } ?>
     
     <?js if (doc.mixes && doc.mixes.length) { ?>
-        <h3 class="subsection-title">Mixes In</h3>
+        <h3 class="subsection-title">Mixins</h3>
         
         <ul><?js doc.mixes.forEach(function(a) { ?>
             <li><?js= self.linkto(a, a) ?></li>
