Don't display lists of Mixins

--- a/tmpl/container.tmpl
+++ b/tmpl/container.tmpl
@@ -57,13 +57,13 @@
         <?js }); ?></ul>
     <?js } ?>
     
-    <?js if (doc.mixes && doc.mixes.length) { ?>
+    <!--<?js if (doc.mixes && doc.mixes.length) { ?>
         <h3 class="subsection-title">Mixins</h3>
         
         <ul><?js doc.mixes.forEach(function(a) { ?>
             <li><?js= self.linkto(a, a) ?></li>
         <?js }); ?></ul>
-    <?js } ?>
+    <?js } ?>-->
     
     <?js if (doc.requires && doc.requires.length) { ?>
         <h3 class="subsection-title">Requires</h3>
