--- a/tmpl/details.tmpl
+++ b/tmpl/details.tmpl
@@ -14,14 +14,14 @@ var self = this;
         
     <?js } ?>
         
-    <?js if (data.mixes && mixes.length && data.kind == "member") {?>
+    <!--<?js if (data.mixes && mixes.length && data.kind == "member") {?>
     <dt class="tag-mixes">Mixins:</dt>
     <dd class="tag-mixes">
         <ul><?js mixes.forEach(function(s) { ?>
             <li><?js= self.linkto(s) ?></li>
         <?js }); ?></ul>
     </dd>    
-    <?js } ?>
+    <?js } ?>-->
 
     <?js if (data.version) {?>
     <dt class="tag-version">Version:</dt>
