--- a/tmpl/container.tmpl
+++ b/tmpl/container.tmpl
@@ -29,6 +29,9 @@
     <?js if (doc.kind === 'module' && doc.module) { ?>
         <?js if (doc.description) { ?>
             <div class="description"><?js= doc.description ?></div>
+            <?js if (doc.since) {?>
+                <div class="description tag-since"><b>Since:</b>ArcGIS API for JavaScript <?js= doc.since ?></div>
+            <?js } ?>
         <?js } ?>
         <?js= self.partial('method.tmpl', doc.module) ?>
     <?js } ?>
