add Constructors subsection-title

--- a/tmpl/container.tmpl
+++ b/tmpl/container.tmpl
@@ -33,6 +33,7 @@
                 <div class="description tag-since"><b>Since:</b>ArcGIS API for JavaScript <?js= doc.since ?></div>
             <?js } ?>
         <?js } ?>
+        <h3 class="subsection-title">Constructors</h3>
         <?js= self.partial('method.tmpl', doc.module) ?>
     <?js } ?>
     
