--- a/tmpl/details.tmpl
+++ b/tmpl/details.tmpl
@@ -28,9 +28,8 @@ var self = this;
     <dd class="tag-version"><ul class="dummy"><li><?js= version ?></li></ul></dd>
     <?js } ?>
     
-    <?js if (data.since) {?>
-    <dt class="tag-since">Since:</dt>
-    <dd class="tag-since"><ul class="dummy"><li><?js= since ?></dd>
+    <?js if (data.since && data.kind !== "module") {?>
+        <div class="description tag-since"><b>Since:</b> ArcGIS API for JavaScript <?js= since ?></div>
     <?js } ?>
 
     <?js if (data.deprecated) { ?>
