--- a/tmpl/container.tmpl
+++ b/tmpl/container.tmpl
@@ -36,8 +36,7 @@
             if (methods && methods.length && methods.forEach) { 
         ?>
             <?js if (sectionAdded) {?> | <?js } else { sectionAdded=true;} ?>    
-            <a href="#methods">Methods</a><?js= methods.length ?>
-            
+            <a href="#methods">Methods</a>            
         <?js } ?>        
         <?js
             if (members && members.length && members.forEach) { 
