Name forum links as "Forum"

--- a/tmpl/layout.tmpl
+++ b/tmpl/layout.tmpl
@@ -77,7 +77,7 @@
         <a class="side-nav-link" href="../guide">Guide</a>
         <a class="side-nav-link" href="../api-reference">API Reference</a>
         <a class="side-nav-link" href="../sample-code">Sample Code</a>
-        <a class="side-nav-link" href="https://geonet.esri.com/community/developers/web-developers/arcgis-api-for-javascript">Geonet Forums</a>
+        <a class="side-nav-link" href="https://geonet.esri.com/community/developers/web-developers/arcgis-api-for-javascript">Forum</a>
       </aside>
     </nav>
   </div>
@@ -142,7 +142,7 @@
           <a class="sub-nav-link" href="../guide">Guide</a>
           <a class="sub-nav-link is-active" href="../api-reference">API Reference</a>
           <a class="sub-nav-link" href="../sample-code">Sample Code</a>
-          <a class="sub-nav-link" href="https://geonet.esri.com/community/developers/web-developers/arcgis-api-for-javascript">Geonet Forum</a>
+          <a class="sub-nav-link" href="https://geonet.esri.com/community/developers/web-developers/arcgis-api-for-javascript">Forum</a>
         </nav>
       </div>
     </header>
