Missing ending div tag

--- a/tmpl/container.tmpl
+++ b/tmpl/container.tmpl
@@ -56,6 +56,7 @@
             <?js if (sectionAdded) {?> | <?js } ?>    
             <a href="#events">Events</a>
         <?js } ?>
+    </div>
 </header>  
 
 <article>
