--- a/tmpl/container.tmpl
+++ b/tmpl/container.tmpl
@@ -10,7 +10,7 @@
     <?js= self.partial('source.tmpl', doc) ?>
 <?js } else { ?>
 
-<section>
+<section class="column-17 pre-1 content-face">
     
 <header>
     <h2><?js if (doc.ancestors && doc.ancestors.length) { ?>
