Add class names to section element to support grid layout for main page

--- a/tmpl/mainpage.tmpl
+++ b/tmpl/mainpage.tmpl
@@ -8,7 +8,7 @@ var self = this;
 <?js } ?>
 
 <?js if (data.readme) { ?>
-    <section>
+    <section class="column-17 pre-1 content-face">
         <article class="readme"><?js= data.readme ?></article>
     </section>
 <?js } ?>
